--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@ contacts.html
 		</header>
 		
 		<nav>
-			<p><a href="home.html">Home</a>&nbsp; &#9475; &nbsp;
+			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
 			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
 			<a href="assignments.html">Assignments</a>&nbsp; &#9475; &nbsp;
