--- a/extras.html
+++ b/extras.html
@@ -18,7 +18,7 @@ assignments.html
 			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
 			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
-			<a href="assignments.html">Assignments</a>&nbsp; &#9475; &nbsp;
+			<a href="assignments.html">Extras</a>&nbsp; &#9475; &nbsp;
 			<a href="extras.html">Projects</a></p>
 		</nav>
 		
