--- a/extras.html
+++ b/extras.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Jack Steel
-assignments.html
+extras.html
 8/30/24-->
 <html lang="en">
 	<head>
@@ -19,7 +19,7 @@ assignments.html
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
 			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
 			<a href="extras.html">Extras</a>&nbsp; &#9475; &nbsp;
-			<a href="extras.html">Projects</a></p>
+			<a href="projects.html">Projects</a></p>
 		</nav>
 		
 		<main>
