--- a/aboutMe.html
+++ b/aboutMe.html
@@ -29,7 +29,7 @@ aboutMe.html
 		
 		<footer>
 			<p>&copy; Copyright 2024. All Rights Reserved.</p>
-			<p>steeljack2007@gmail.com</p>
+			<p><a href="mailto:john.steel@stu.cvccworks.edu">john.steel@stu.cvccworks.edu</a></p>
 		</footer>
 	</body>
 </html>
