--- a/extras.html
+++ b/extras.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Jack Steel
-extras.html
+assignments.html
 8/30/24-->
 <html lang="en">
 	<head>
@@ -18,8 +18,8 @@ extras.html
 			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
 			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
-			<a href="extras.html">Extras</a>&nbsp; &#9475; &nbsp;
-			<a href="projects.html">Projects</a></p>
+			<a href="assignments.html">Extras</a>&nbsp; &#9475; &nbsp;
+			<a href="extras.html">Projects</a></p>
 		</nav>
 		
 		<main>
@@ -29,7 +29,7 @@ extras.html
 		
 		<footer>
 			<p>&copy; Copyright 2024. All Rights Reserved.</p>
-			<p>steeljack2007@gmail.com</p>
+			<p><a href="mailto:john.steel@stu.cvccworks.edu">john.steel@stu.cvccworks.edu</a></p>
 		</footer>
 	</body>
 </html>
