--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@ index.html
 		
 		<main>
 			<p>My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
-			<img src="https://www.nps.gov/common/uploads/cropped_image/primary/D284C30B-C5BA-C78D-F8C1B621D3323E4F.jpg?width=1300&quality=90&mode=crop" width="495px" height="300">
+			<img src="images/yellowstone.jpg" width="495px" height="300">
 		</main>
 		
 		<footer>
 			<p>&copy; Copyright 2024. All Rights Reserved.</p>
-			<p>steeljack2007@gmail.com</p>
+			<p><a href="mailto:john.steel@stu.cvccworks.edu">john.steel@stu.cvccworks.edu</a></p>
 		</footer>
 	</body>
 </html>
