--- a/projects/ch3/fitness/contact.html
+++ b/projects/ch3/fitness/contact.html
@@ -43,7 +43,7 @@
 		<!-- Use the footer area to add webpage footer content -->
 		<footer>
 			<p>&copy; Copyright 2024. All Rights Reserved.</p>
-			<p><a href="mailto:forwardfitness@club.net">forwardfitness@club.net</a></p>
+			<p><a href="mailto:john.steel@stu.cvccworks.edu">john.steel@stu.cvccworks.edu</a></p>
 		</footer>
 		
 	</div>
