--- a/template.html
+++ b/template.html
@@ -28,7 +28,7 @@ template.html
 		
 		<footer>
 			<p>&copy; Copyright 2024. All Rights Reserved.</p>
-			<p>steeljack2007@gmail.com</p>
+			<p><a href="mailto:john.steel@stu.cvccworks.edu">john.steel@stu.cvccworks.edu</a></p>
 		</footer>
 	</body>
 </html>
