--- a/index.html
+++ b/index.html
@@ -23,8 +23,14 @@ index.html
 		</nav>
 		
 		<main>
-			<p>My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
-			<img src="images/yellowstone.jpg" width="495px" height="300">
+		
+			<div id="intro">
+			
+				<p>My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
+				<img src="images/yellowstone.jpg" width="495px" height="300">
+				
+			</div>
+			
 		</main>
 		
 		<footer>
