--- a/projects.html
+++ b/projects.html
@@ -23,15 +23,21 @@ projects.html
 		</nav>
 		
 		<main>
-			<h2>Projects</h2>
-			<ul>
-				<li>Chapter 3</li>
-					<ul>
-						<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
-						<li><a href="projects/ch3/apply/index.html">Apply</a></li>
-						<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
-					</ul>
-			</ul>
+		
+			<div id="projects">
+			
+				<h2>Projects</h2>
+				<ul>
+					<li>Chapter 3</li>
+						<ul>
+							<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch3/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
+						</ul>
+				</ul>
+				
+			</div>
+			
 		</main>
 		
 		<footer>
