--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Jack Steel
-projects.html
+about.html
 8/30/24-->
 <html lang="en">
 	<head>
@@ -23,21 +23,8 @@ projects.html
 		</nav>
 		
 		<main>
-		
-			<div id="projects">
-			
-				<h2>Projects</h2>
-				<ul>
-					<li>Chapter 3</li>
-						<ul>
-							<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
-							<li><a href="projects/ch3/apply/index.html">Apply</a></li>
-							<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
-						</ul>
-				</ul>
-				
-			</div>
-			
+			<h2>About Me</h2>
+			<p></p>
 		</main>
 		
 		<footer>
