--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@ contacts.html
 		<nav>
 			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
-			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
+			<a href="about.html">About me</a>&nbsp; &#9475; &nbsp;
 			<a href="extras.html">Extras</a>&nbsp; &#9475; &nbsp;
 			<a href="projects.html">Projects</a></p>
 		</nav>
