--- a/template.html
+++ b/template.html
@@ -15,11 +15,11 @@ template.html
 		</header>
 		
 		<nav>
-			<p><a href="">Home</a>&nbsp; &#9475; &nbsp;
-			<a href="">Contacts</a>&nbsp; &#9475; &nbsp;
-			<a href="">About me</a>&nbsp; &#9475; &nbsp;
+			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
+			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
+			<a href="about.html">About me</a>&nbsp; &#9475; &nbsp;
 			<a href="extras.html">Extras</a>&nbsp; &#9475; &nbsp;
-			<a href="">Projects</a></p>
+			<a href="projects.html">Projects</a></p>
 		</nav>
 		
 		<main>
