--- a/extras.html
+++ b/extras.html
@@ -17,7 +17,7 @@ assignments.html
 		<nav>
 			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
-			<a href="aboutMe.html">About me</a>&nbsp; &#9475; &nbsp;
+			<a href="about.html">About me</a>&nbsp; &#9475; &nbsp;
 			<a href="assignments.html">Extras</a>&nbsp; &#9475; &nbsp;
 			<a href="extras.html">Projects</a></p>
 		</nav>
