--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ index.html
 			<div id="intro">
 			
 				<p>My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
-				<img src="images/yellowstone.jpg" width="495px" height="300">
+				<img src="images/yellowstone.jpg" alt="Yellowstone Grand Canyon" width="495px" height="300">
 				
 			</div>
 			
