--- a/about.html
+++ b/about.html
@@ -23,8 +23,22 @@ about.html
 		</nav>
 		
 		<main>
+		
+			<div id="hobbies">
+			
 			<h2>About Me</h2>
-			<p></p>
+			<p>Hobbies</p>
+			<ul>
+				<li>Video Games</li>
+				<li>Camping</li>
+				<li>Skiing</li>
+			</ul>
+			
+			<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point"></p>
+			<p>My friends and I at Cedar Point</p>
+			
+			</div>
+			
 		</main>
 		
 		<footer>
