--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ about.html
 			</ul>
 			
 			<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point."></p>
-			<p>My friends and I at Cedar Point</p>
+			<p>My friends and I at Cedar Point.</p>
 			
 			</div>
 			
