--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@ about.html
 				<li>Skiing</li>
 			</ul>
 			
-			<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point."></p>
+			<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point"></p>
 			<p>My friends and I at Cedar Point.</p>
 			
 			</div>
