--- a/extras.html
+++ b/extras.html
@@ -18,8 +18,8 @@ assignments.html
 			<p><a href="index.html">Home</a>&nbsp; &#9475; &nbsp;
 			<a href="contacts.html">Contacts</a>&nbsp; &#9475; &nbsp;
 			<a href="about.html">About me</a>&nbsp; &#9475; &nbsp;
-			<a href="assignments.html">Extras</a>&nbsp; &#9475; &nbsp;
-			<a href="extras.html">Projects</a></p>
+			<a href="extras.html">Extras</a>&nbsp; &#9475; &nbsp;
+			<a href="projects.html">Projects</a></p>
 		</nav>
 		
 		<main>
