--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,10 @@ projects.html
 							<li><a href="projects/ch3/apply/index.html">Apply</a></li>
 							<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
 						</ul>
+					<li>Chapter 4</li>
+						<ul>
+							<li><a href="projects/ch4/fitness/index.html">Fitness</a></li>
+						</ul>
 				</ul>
 				
 			</div>
