--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ index.html
 		
 			<div id="intro">
 			
-				<p id="yellowstone"><img src="images/yellowstone.jpg" alt="Yellowstone Grand Canyon"></p>
+				<p id="bitmoji"><img src="images/bitmoji.png" alt="Yellowstone Grand Canyon"></p>
 				<p id="introduction">My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
 				
 			</div>
