--- a/projects.html
+++ b/projects.html
@@ -30,21 +30,23 @@ projects.html
 			<div id="projects">
 			
 				<h2>Projects</h2>
-				<ul>
-					<li>Chapter 3</li>
-						<ul>
-							<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
-							<li><a href="projects/ch3/apply/index.html">Apply</a></li>
-							<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
-						</ul>
-					<li>Chapter 4</li>
-						<ul>
-							<li><a href="projects/ch4/fitness/index.html">Fitness</a></li>
-							<li><a href="projects/ch4/apply/index.html">Apply</a></li>
-							<li><a href="projects/ch4/extend/extend04.html">Extend</a></li>
-						</ul>
-				</ul>
-				
+				<h3>Chapter 3</h3>
+					<ul>
+						<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
+						<li><a href="projects/ch3/apply/index.html">Apply</a></li>
+						<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
+					</ul>
+				<h3>Chapter 4</h3>
+					<ul>
+						<li><a href="projects/ch4/fitness/index.html">Fitness</a></li>
+						<li><a href="projects/ch4/apply/index.html">Apply</a></li>
+						<li><a href="projects/ch4/extend/extend04.html">Extend</a></li>
+					</ul>
+				<h3>Chapter 5</h3>
+					<ul>
+						<li><a href="projects/ch5/fitness/index.html">Fitness</a></li>
+					</ul>
+
 			</div>
 			
 		</main>
