--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,8 @@ projects.html
 				<h3>Chapter 5</h3>
 					<ul>
 						<li><a href="projects/ch5/fitness/index.html">Fitness</a></li>
+						<li><a href="projects/ch5/apply/index.html">Apply</a></li>
+						<li><a href="projects/ch5/extend/extend05.html">Extend</a></li>
 					</ul>
 
 			</div>
