--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@ about.html
 				</div>
 				
 				<div id="cedarPoint">
-					<p><img id="cedarPoint" src="images/cedarPoint.jpg" alt="5 people at Cedar Point"></p>
+					<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point"></p>
 					<br>
 					<p>My friends and I at Cedar Point.</p>
 				</div>
