--- a/template.html
+++ b/template.html
@@ -7,6 +7,10 @@ template.html
 		<title>Jack Steel</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/styles.css">
+		<meta name="viewport" content="width=device-width, inital scale=1">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
 	</head>
 	
 	<body>
