--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@ projects.html
 		<title>Jack Steel</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/styles.css">
-		<meta name="viewport" content="width=device-width, inital scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Playwrite+DE+Grund:wght@100..400&display=swap" rel="stylesheet">
@@ -52,7 +52,12 @@ projects.html
 						<li><a href="projects/ch5/apply/index.html">Apply</a></li>
 						<li><a href="projects/ch5/extend/index.html">Extend</a></li>
 					</ul>
-
+				<h3>Chapter 6</h3>
+					<ul>
+						<li><a href="projects/ch6/fitness/index.html">Fitness</a></li>
+						<li><a href="projects/ch6/apply/index.html">Apply</a></li>
+						<li><a href="projects/ch6/extend/index.html">Extend</a></li>
+					</ul>
 			</div>
 			
 		</main>
