--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,12 @@ projects.html
 						<li><a href="projects/ch6/apply/index.html">Apply</a></li>
 						<li><a href="projects/ch6/extend/extend06.html">Extend</a></li>
 					</ul>
+				<h3>Chapter 7</h3>
+					<ul>
+						<li><a href="projects/ch7/fitness/index.html">Fitness</a></li>
+						<li><a href="projects/ch7/apply/index.html">Apply</a></li>
+						<li><a href="projects/ch7/extend/extend07.html">Extend</a></li>
+					</ul>
 			</div>
 			
 		</main>
