--- a/about.html
+++ b/about.html
@@ -47,9 +47,10 @@ about.html
 				</div>
 				
 				<div id="cedarPoint">
-					<p><img src="images/cedarPoint.jpg" alt="5 people at Cedar Point"></p>
-					<br>
-					<p>My friends and I at Cedar Point.</p>
+					<figure class="frame">
+						<img src="images/cedarPoint.jpg" alt="5 people at Cedar Point">
+						<figcaption class="pic-text">Cedar Point with Friends</figcaption>
+					</figure>
 				</div>
 				
 			</div>
