--- a/projects/ch7/extend/extend07.html
+++ b/projects/ch7/extend/extend07.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<!-- Student's Name, Today's Date -->
+<!-- Jack Steel, 10/9/2024 -->
 <html lang="en">
 <head>
 	<title>Chapter 7, Extend</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="css/styles07.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 
@@ -46,7 +50,7 @@
             
             <aside>
                 <!-- Use the paragraph element below to summarize the method you used to create your columns. Identify the resource you used and include a link to the resource that opens in a new tab. -->
-                <p></p>
+                <p>I used column rules to make the columns. <a href="https://www.w3schools.com/css/css3_multiple_columns.asp">Resource</a></p>
                 
                 <!-- Use the paragraph element below to note the resource you used to create your favicon. Include a link to the resource that opens in a new tab. -->
                 <p></p>
@@ -56,7 +60,7 @@
 
         <!-- Use the footer area to add webpage footer content -->
         <footer>
-            <p>Designed by: Student's Name</p>
+            <p>Designed by: Jack Steel</p>
         </footer>
 
 	</div>
