--- a/hobbies.html
+++ b/hobbies.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--Jack Steel
-template.html
+assignments.html
 8/30/24-->
 <html lang="en">
 	<head>
@@ -30,7 +30,22 @@ template.html
 		</nav>
 		
 		<main>
-			<p></p>
+			<h2>Hobbies</h2>
+			<article id="skiing">
+				<img class="tablet-desktop" id="ski" src="images/Skiing.jpeg">
+				<h3>How to Ski</h3>
+				<ol>
+					<li>Stand upright while keeping your balance.</li>
+					<li>Keep knees slightly bent as you descend down the hill.</li>
+					<li>Turn yourself by shifting your weight towards your downhill ski.</li>
+					<li>Kepp yourself upright as your body starts to turn on the slope.</li>
+					<li>Repeatly turn across the hill to control your speed and descent.</li>
+					<li>Shortly before you reach the bottom of the hill, prepare to stop.</li>
+					<li>Stop by turning your skiis inward creating a "pizza" for a beggineer stop</li>
+					<li>Keep this form until you eventually stop moving.</li>
+					<li>Congrats on making it down your first hill!</li>
+				</ol>
+			</article>
 		</main>
 		
 		<footer>
