--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ index.html
 				<li><a href="index.html">Home</a></li>
 				<li><a href="contacts.html">Contacts</a></li>
 				<li><a href="about.html">About me</a></li>
-				<li><a href="extras.html">Extras</a></li>
+				<li><a href="hobbies.html">Hobbies</a></li>
 				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 		
 		<main>
 		
-			<div id="intro">
+			<section id="intro">
 			
 				<p id="bitmoji"><img src="images/bitmoji.png" alt="Yellowstone Grand Canyon"></p>
 				<p id="introduction">My name is Jack Steel, and I am in Programming and Software Devolpment for the CVCC</p>
 				
-			</div>
+			</section>
 			
 		</main>
 		
