--- a/projects.html
+++ b/projects.html
@@ -24,47 +24,70 @@ projects.html
 				<li><a href="index.html">Home</a></li>
 				<li><a href="contacts.html">Contacts</a></li>
 				<li><a href="about.html">About me</a></li>
-				<li><a href="extras.html">Extras</a></li>
+				<li><a href="hobbies.html">Hobbies</a></li>
 				<li><a href="projects.html">Projects</a></li>
 			</ul>
 		</nav>
 		
 		<main>
 		
-			<div id="projects">
+			<article id="projects">
 			
 				<h2>Projects</h2>
-				<h3>Chapter 3</h3>
-					<ul>
-						<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
-						<li><a href="projects/ch3/apply/index.html">Apply</a></li>
-						<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
-					</ul>
-				<h3>Chapter 4</h3>
-					<ul>
-						<li><a href="projects/ch4/fitness/index.html">Fitness</a></li>
-						<li><a href="projects/ch4/apply/index.html">Apply</a></li>
-						<li><a href="projects/ch4/extend/extend04.html">Extend</a></li>
-					</ul>
-				<h3>Chapter 5</h3>
-					<ul>
-						<li><a href="projects/ch5/fitness/index.html">Fitness</a></li>
-						<li><a href="projects/ch5/apply/index.html">Apply</a></li>
-						<li><a href="projects/ch5/extend/index.html">Extend</a></li>
-					</ul>
+				<aside id="ch3">
+					<h3>Chapter 3</h3>
+						<ul>
+							<li><a href="projects/ch3/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch3/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch3/extend/extend03.html">Extend</a></li>
+						</ul>
+				</aside>
+
+				<aside id="ch4">
+					<h3>Chapter 4</h3>
+						<ul>
+							<li><a href="projects/ch4/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch4/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch4/extend/extend04.html">Extend</a></li>
+						</ul>
+				</aside>
+
+				<aside id="ch5">
+					<h3>Chapter 5</h3>
+						<ul>
+							<li><a href="projects/ch5/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch5/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch5/extend/index.html">Extend</a></li>
+						</ul>
+				</aside>
+
+				<aside id="ch6">
 				<h3>Chapter 6</h3>
 					<ul>
 						<li><a href="projects/ch6/fitness/index.html">Fitness</a></li>
 						<li><a href="projects/ch6/apply/index.html">Apply</a></li>
 						<li><a href="projects/ch6/extend/extend06.html">Extend</a></li>
 					</ul>
-				<h3>Chapter 7</h3>
-					<ul>
-						<li><a href="projects/ch7/fitness/index.html">Fitness</a></li>
-						<li><a href="projects/ch7/apply/index.html">Apply</a></li>
-						<li><a href="projects/ch7/extend/extend07.html">Extend</a></li>
-					</ul>
-			</div>
+				</aside>
+
+				<aside id="ch7">
+					<h3>Chapter 7</h3>
+						<ul>
+							<li><a href="projects/ch7/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch7/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch7/extend/extend07.html">Extend</a></li>
+						</ul>
+				</aside>
+
+				<aside id="ch8">
+					<h3>Chapter 8</h3>
+						<ul>
+							<li><a href="projects/ch8/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch8/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch8/extend/extend08.html">Extend</a></li>
+						</ul>
+				</aside>
+			</article>
 			
 		</main>
 		
