--- a/projects.html
+++ b/projects.html
@@ -87,6 +87,15 @@ projects.html
 							<li><a href="projects/ch8/extend/extend08.html">Extend</a></li>
 						</ul>
 				</aside>
+
+				<aside id="ch9">
+					<h3>Chapter 9</h3>
+						<ul>
+							<li><a href="projects/ch9/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch9/apply/index.html">Apply</a></li>
+							<li><a href="projects/ch9/analyze/index.html">Analyze</a></li>
+						</ul>
+				</aside>
 			</article>
 			
 		</main>
