--- a/projects.html
+++ b/projects.html
@@ -95,6 +95,14 @@ projects.html
 							<li><a href="projects/ch9/apply/index.html">Apply</a></li>
 						</ul>
 				</aside>
+
+				<aside id="ch10">
+					<h3>Chapter 10</h3>
+						<ul>
+							<li><a href="projects/ch10/fitness/index.html">Fitness</a></li>
+							<li><a href="projects/ch10/apply/index.html">Apply</a></li>
+						</ul>
+				</aside>
 			</article>
 			
 		</main>
